# houston-housing-dispatch

./: .env.example  .gitignore  .railwayignore  Procfile  README.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  tsconfig.json
.claude/: settings.local.json
.github/workflows/: dispatch-draft.yml
docs/brainstorms/: 2026-03-01-newsletter-writing-style-brainstorm.md  2026-03-01-scoring-system-redesign-brainstorm.md  houston-housing-dispatch-requirements.md
docs/drafts/: voice-examples-draft.md
docs/operations/: credentials-and-access.md  hosted-dispatch-setup.md  running-the-dispatch.md
docs/plans/: 2026-02-25-feat-houston-housing-dispatch-automation-plan.md  2026-03-01-feat-newsletter-writing-style-improvement-plan.md  2026-03-01-feat-scoring-system-redesign-plan.md  (+1 more)
src/: __init__.py  cli.py  cli.ts  config.py  database.py  models.py
src/ai/: __init__.py  claude_client.py
tests/: apifyApiClient.test.ts  apifyClient.contract.test.ts  calibrationReport.test.ts  candidateSelector.test.ts  cli.test.ts  config.test.ts  conftest.py  db.test.ts  dbSummary.test.ts  draftPromptBuilder.test.ts  dryRun.test.ts  enrichmentAdapter.test.ts  gmailApiClient.test.ts  gmailClient.contract.test.ts  gmailSampler.test.ts  harEmailParser.test.ts  issueAssembler.test.ts  listingNormalizer.test.ts  localNeighborhood.test.ts  marketBatchSummary.test.ts  newsletterDraft.test.ts  notificationAdapter.test.ts  operatorAccess.test.ts  publicationGuard.test.ts  rationaleBuilder.test.ts  redaction.test.ts  runDispatch.test.ts  scoringRules.test.ts  spiralAdapter.test.ts  substackDraft.test.ts  test_address_normalizer.py  test_neighborhood_resolver.py  test_scorer.py  zillowDetailsMapper.test.ts
(+80 files in other folders)
